<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarLLT"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/heading"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:padding="20dp"
                    android:text="@string/text_select_gender"
                    android:textColor="@color/colorBlue" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1.5"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/genderSelectionRL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/male"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/button_background_oval_shape_blue"
                        android:ems="10"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:text="@string/text_gender_male"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/feMale"
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/male"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_background_oval_shape_blue"
                        android:ems="10"
                        android:gravity="center"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:text="@string/text_gender_female"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold" />


                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>